net/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  selector:
    app.kubernetes.io/name: echo-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
